<resources>
    <string name="app_name">TaskApp</string>
    <string name="text">Привет всем</string>
    <string name="open_calculator">Open Calculator, 25th task</string>
    <string name="subtraction_operation">-</string>
    <string name="addition_operation">+</string>
    <string name="multiplication_operation">*</string>
    <string name="division_operation">/</string>
    <string name="divide_by_zero">Can\'t divide by zero !</string>
    <string name="open_stopwatch">Open a Stopwatch, 26th task</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="open_mycolor_act">Open MyColor activity, 27th task</string>
    <string name="red">красный</string>
    <string name="yellow">желтый</string>
    <string name="green">зеленый</string>
</resources>